--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,9 @@ erl_crash.dump
 # Ignore package tarball (built via "mix hex.build").
 exvalibur-*.tar
 
+# Benchfella snapshots
+/bench/snapshots
+
 # Elixir LS
 /.elixir_ls/
 
